# vermilion

./: .gitmodules  CMakeLists.txt  Makefile  README.MD
assets/saloon/: Saloon_anim.fbx  saloon.mtl
assets/viking_room/: viking_room.dae
examples/: CMakeLists.txt
examples/src/: example_triangle.cpp  example_uniform.cpp  example_uniform_buffer.cpp
libvermilion/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile
libvermilion/core/: Makefile
libvermilion/core/src/: Buffer.cpp  Buffer.hpp  Pipeline.cpp  Pipeline.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderable.hpp  Shader.hpp  Texture.hpp  api.cpp  api.hpp  instance.cpp  logger.cpp  stb_image.cpp  vermilion.cpp  window.cpp  window.hpp
libvermilion/core/src/platform/glfw/: window.cpp  window.hpp
libvermilion/core/src/platform/opengl/: Buffer.cpp  Buffer.hpp  Pipeline.cpp  Pipeline.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderable.cpp  Renderable.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  api.cpp  api.hpp  context.cpp  context.hpp
libvermilion/core/src/platform/vulkan/: Buffer.cpp  Buffer.hpp  Pipeline.cpp  Pipeline.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderable.cpp  Renderable.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  api.cpp  api.hpp  context.cpp  context.hpp  physicaldevice.cpp  physicaldevice.hpp  validationlayers.cpp  validationlayers.hpp  vkCommandPool.cpp  vkCommandPool.hpp  vkDevice.cpp  vkDevice.hpp  vkFrameBuffer.cpp  vkFrameBuffer.hpp  vkImageView.cpp  vkImageView.hpp  vkInstance.cpp  vkInstance.hpp  vkPhysicalDevice.cpp  vkPhysicalDevice.hpp  vkRenderPass.cpp  vkRenderPass.hpp  vkSwapChain.cpp  vkSwapChain.hpp  vk_mem_alloc.cpp  vk_mem_alloc.h
libvermilion/include/vermilion/: Buffer.hpp  Pipeline.hpp  RenderTarget.hpp  Renderable.hpp  Shader.hpp  Texture.hpp  api.hpp  instance.hpp  logger.hpp  utils.hpp  vermilion.hpp  window.hpp
libvermilion/include/vermilion/core/: context.hpp  instance.hpp  logger.hpp
libvermilion/include/vermilion/window/: window.hpp
libvermilion/src/: vermilion.cpp
libvermilion/utils/src/: obj.cpp
libvermilion/window/: Makefile
libvermilion/window/src/: window.cpp
libvermilion/window/src/platform/unix_X11/: window.cpp  window.hpp
libvermilion/window/src/platform/unix_glfw/: window.cpp  window.hpp
libvermilion/window/src/platform/windows_glfw/: window.cpp  window.hpp
licences/: GLFW.licence  stb.licence
sandbox/: .ycm_extra_conf.py  CMakeLists.txt  Makefile
sandbox/src/: gui.cpp  gui.hpp  main.cpp
